# hero-app-v2

./: .env-example  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini
app/config/: __init__.py  base.py
app/db/postgresql/: base.py  crud.py  decorators.py  dependencies.py  models.py  utils.py
app/db/postgresql/migrations/: env.py
app/db/postgresql/migrations/versions/: 2023_02_11_1909-b7ecda250e3b_heroes.py
app/entrypoints/: __main__.py  main.py
app/exceptions/: http.py
app/modules/auth/: api_token.py
app/modules/heroes/api/: __init__.py  v1.py
app/modules/heroes/crud/: __init__.py  base.py  models.py
app/modules/heroes/services/: __init__.py  base.py  dependencies.py  schemas.py
app/routers/: __init__.py
app/routers/api_v1/: endpoints.py
app/scripts/statements/: create_database.sql
app/types/: base.py  heroes.py
app/utils/: decorators.py  schemas.py
tests/: conftest.py  factory.py
tests/endpoints/heroes/v1/: tests.py
tests/endpoints/heroes/v1/data/: data.json
tests/fixtures/: heroes.py
tests/utils/: assertions.py
